corpus/c/macro_include/case-13/snapshots/gcc13_14/single_sink_structured/render.ci.txt
src/main.c:9:12: error: [missing_name] identifier not found in scope
help: check for typos, missing #include, or missing namespace qualifier
name: Box
use : return READ_MISSING(box);
| src/main.c:9:12
|     return READ_MISSING(box);
|            ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output